--- a/.github/workflows/perf-test.yaml
+++ b/.github/workflows/perf-test.yaml
@@ -9,12 +9,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  setup:
+  test:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      id-token: write  # required for google-github-actions/auth
+    strategy:
+      matrix:
+        input:
+          - maven-100-artifacts/central
+          - maven-100-artifacts/virtual
+          - maven-100-artifacts/remote
 
     steps:
       - name: Checkout
@@ -27,21 +29,13 @@ jobs:
           service_account: github-actions@bilt-cicd.iam.gserviceaccount.com
           create_credentials_file: true
 
-      - name: Build
-        run: |
-          ./gradlew build
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
 
-  test:
-    needs: setup
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        input:
-          - maven-100-artifacts/central
-          - maven-100-artifacts/virtual
-          - maven-100-artifacts/remote
-
-    steps:      
       - name: Run Perf Test
         run: |
           RUN_DIR=/tmp/test/${{ matrix.input }} TEST=${{ matrix.input }} ./test/run.sh
