--- a/.github/workflows/perf-test.yaml
+++ b/.github/workflows/perf-test.yaml
@@ -18,6 +18,10 @@ jobs:
           - maven-100-artifacts/virtual
           - maven-100-artifacts/remote
 
+    permissions:
+      contents: read
+      id-token: write  # required for google-github-actions/auth
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
