--- a/.github/workflows/perf-test.yaml
+++ b/.github/workflows/perf-test.yaml
@@ -14,9 +14,9 @@ jobs:
     strategy:
       matrix:
         input:
-          - maven-100-artifacts/central
-          - maven-100-artifacts/virtual
-          - maven-100-artifacts/remote
+          - tests/maven-0-artifacts
+          - tests/quarkus-starter
+          - tests/payment-svc
 
     permissions:
       contents: read
@@ -33,13 +33,13 @@ jobs:
           service_account: github-actions@bilt-cicd.iam.gserviceaccount.com
           create_credentials_file: true
 
-      - name: Set up JDK 11
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
       - name: Run Perf Test
         run: |
-          RUN_DIR=/tmp/test/${{ matrix.input }} TEST=${{ matrix.input }} ./test/run.sh
+          ./test/run.sh ${{ matrix.input }}
