--- a/.github/workflows/perf-test.yaml
+++ b/.github/workflows/perf-test.yaml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Run Perf Test
         run: |
-          ./test/run.sh ${{ matrix.input }}
+          ./run_test.sh ${{ matrix.input }}
